# GoogleTasksMCP

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/: auth.py  config.py  server.py  tools.py
